iframe template fix 9

--- a/templates/payframe.html
+++ b/templates/payframe.html
@@ -26,6 +26,15 @@
             height="600"
             style="display: none;"
         ></iframe>
+        <div class="container d-flex justify-content-center align-items-center py-3 border-top">
+            <span class="text-muted px-2">Powered by Vyntec</span>
+            <img 
+              src="https://storage.googleapis.com/msgsndr/h9yc7BtsLVSheMdIWErB/media/67f6eb206dd5a5e6ce3cc545.png" 
+              alt="Vyntec Logo" 
+              class="img-fluid" 
+              style="height: 30px;"
+            >
+          </div>
     </div>
 
     <script>
