iframe template fix 11

--- a/templates/payment_iframe.html
+++ b/templates/payment_iframe.html
@@ -92,14 +92,14 @@
                             bodyColor: 'white',
                             fontFamily: 'Montserrat',
                             fontSize: '18px',
-                            cssClasses: 
+                            cssClasses: `
                                 .container {
                                     padding-top: 10px;
                                 }
                                 .card {
                                     background: #121212;
                                 }
-                            
+                            `
                         };
             
                         const chingupPaymentData = {
